[package]
name = "mycron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
cron_tab = { version = "0.2.2", features = ["all"] }
directories = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml_ng = "0.10.0"
