[package]
name = "mycron"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mycronmanage"
path = "src/mycronmanage.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
cron_tab = { version = "0.2.2", features = ["all"] }
directories = "5.0.1"
getset = "0.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml_ng = "0.10.0"

